# deep-research-agent

./: .gitignore  README.md  pyproject.toml  resume_session.py  test_phase4.py
data/: graph.json
eval/: compare_before_after.py  comparison_report.md  eval_rubric.md  eval_scores.md  metrics_eval_8af56c.json  metrics_log.jsonl  proxy_metrics.py  rerun_socratic.py  run_eval_session.py
eval/rerun_5f9219ae/: baseline_changelog_findings.json  baseline_transcript_findings.md  improved_changelog_findings.json  improved_transcript_findings.md
research_agent/: agent.py  config.py  direction.py  mcp_server.py  orchestrator_mcp.py  prompts.py  report_writer.py  validation.py
research_agent/graph/: analysis.py  embeddings.py  schema.py  store.py  summarizer.py  tools.py
research_agent/socratic/: changelog.py  review.py  transcript.py
tests/: conftest.py  test_activity_feed.py  test_dedup.py  test_document_viewer.py  test_mutations.py  test_parsing.py  test_session_model.py  test_session_panel.py  test_transcript.py  test_validation.py
visualization/: server.py
visualization/web/: index.html  package-lock.json  package.json  vite.config.js
visualization/web/public/: index.html
visualization/web/src/: ActivityFeed.jsx  AddNodeDialog.jsx  AnalysisBanner.jsx  App.jsx  DirectionsPanel.jsx  DocumentViewer.jsx  GraphNode.jsx  GraphView.jsx  HomeScreen.jsx  HoverEdge.jsx  NodeChat.jsx  NodeEditor.jsx  PhaseTimeline.jsx  SessionPanel.jsx  ToastContainer.jsx  index.css  useGraphSocket.js
